--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,12 @@ version: "3.5"
 services:
   application:
     build: .
+    volumes:
+      - .:/app
     environment:
       SEQUENCE: RDRU
       MAP_SIZE: 4
       ZOMBIE: (3,1)
       PEOPLE: (0,1) (1,2) (1,1)
-
+      MOD: 1
     restart: on-failure
